fixes scroll indicator and photo block layout on small screens

--- a/app/assets/stylesheets/careers.sass
+++ b/app/assets/stylesheets/careers.sass
@@ -29,8 +29,8 @@
     width: 40px
     height: 70px
     margin-left: -20px
-    top: 93%
-    margin-top: -35px
+    top: 85%
+    margin-top: 0
     box-shadow: inset 0 0 0 1px white
     border-radius: 25px
     opacity: 0.5
