--- a/app/assets/stylesheets/culture.sass
+++ b/app/assets/stylesheets/culture.sass
@@ -44,8 +44,9 @@
       width: 100%
       height: auto
       .restrict-img
-        width: 75%
+        width: 100%
         height: auto
+        vertical-align: bottom
 
 @media (max-width: 500px)
   .photoblock
@@ -53,3 +54,4 @@
       .restrict-img
         width: 100%
         height: auto
+        vertical-align: bottom
